2003-05-05  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs (New.AddressOf): Implement interface
	IMemoryLocation.  This is used when the `new' operator is used in
	the context of an invocation to a method on a value type.

	See http://bugzilla.ximian.com/show_bug.cgi?id=#42390 for an
	example. 

	* namespace.cs: Also check the using aliases here.

	* driver.cs: Move the test for using validity after the types have
	been entered, so we do a single pass that also includes the using
	aliases. 

	* statement.cs (Try.Resolve): Avoid crashing if there is a failure
	in the regular case.   CreateSiblingForFinally is doing extra
	error checking.

	* attribute.cs (GetAttributeArgumentExpression): Store the result
	on an out value, and use the return value to indicate failure
	instead of using null (which is a valid return for Constant.GetValue).

	* statement.cs: Perform the analysis flow for the increment
	portion after the statement, because this will be the real flow of
	execution.  Fixes #42385

	* codegen.cs (EmitContext.EmitArgument,
	EmitContext.EmitStoreArgument): New helper functions when the
	RemapToProxy flag is set.

	* expression.cs (ParameterReference.EmitLdarg): Expose this useful
	function.

	Add support for remapping parameters. 

	* iterators.cs: Propagate parameter values;  Store parameter
	values in the proxy classes.
	
2003-05-04  Miguel de Icaza  <miguel@ximian.com>

	* ecore.cs (FieldExpr): Fix an obvious bug.  static fields do not
	need a proxy reference;  I do not know what I was thinking

	* cs-parser.jay (constructor_initializer): catch another error,
	and display nice message.
	
	(field_declaration): catch void field declaration
	to flag a better error. 

	* class.cs (MemberBase.CheckBase): Report an error instead of a
	warning if a new protected member is declared in a struct. 
	(Field.Define): catch the error of readonly/volatile.

	* ecore.cs (FieldExpr.EmitAssign): reuse the field lookup.
